# hermes-tui-hud

./: FUTURE_TODOS.md  HERMES_TUI_HUD_PLAN_2026-04-15.md  README.md  pyproject.toml
src/hermes_tui_hud/: __init__.py  app.py  cli.py  kanban.py
src/hermes_tui_hud/client/: __init__.py  api.py  models.py
src/hermes_tui_hud/views/: __init__.py  agents.py  cron.py  gateway.py  maintenance.py  notes_todos.py  overview.py  projects.py  sessions.py
src/hermes_tui_hud/widgets/: __init__.py  badge.py  hbar.py  panel.py  statrow.py
